ft:about page \-add about page \-styling about page [finish]

--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,11 @@ img.profile{
         margin-top: 0;
         grid-column: 1/4;
     }
+
+    /* about page */
+    .about-inner-wrapper{
+        grid-column: 1/3;
+    }
     
 }
 
